[gd_scene load_steps=19 format=3 uid="uid://dmbvtkqic86oi"]

[ext_resource type="Script" path="res://scripts/home1.gd" id="1_fgwgs"]
[ext_resource type="Texture2D" uid="uid://c83xj8m7kski" path="res://images/home3.png" id="1_srlah"]
[ext_resource type="Texture2D" uid="uid://bqi2frsfehbe" path="res://images/cazan.png" id="2_excpj"]
[ext_resource type="Texture2D" uid="uid://kkvbbrgettok" path="res://images/veranda.png" id="2_tiq6b"]
[ext_resource type="PackedScene" uid="uid://dq3qjwhrl4stg" path="res://scenes/npcs.tscn" id="3_ev7yt"]
[ext_resource type="Texture2D" uid="uid://dg4t3pcj344xu" path="res://images/bucket3.png" id="3_qkj3e"]
[ext_resource type="Texture2D" uid="uid://bov7lcc5wgusm" path="res://images/table.png" id="4_es6s4"]
[ext_resource type="Texture2D" uid="uid://82mfivgl2vu0" path="res://images/knife.png" id="5_8662y"]
[ext_resource type="Texture2D" uid="uid://dhl28k8p2v87e" path="res://images/table2.png" id="6_7y6lc"]
[ext_resource type="Texture2D" uid="uid://dik4am43pooch" path="res://images/chair1.png" id="7_gjig4"]
[ext_resource type="Texture2D" uid="uid://bn1bvunbelwfo" path="res://images/chair2.png" id="8_uiqo5"]
[ext_resource type="PackedScene" uid="uid://bjslxs2nfkoew" path="res://scenes/player.tscn" id="9_dcg50"]
[ext_resource type="Script" path="res://scripts/fallowCam.gd" id="10_8eryw"]
[ext_resource type="Texture2D" uid="uid://u87ykuieiqqe" path="res://images/fiddlesticks.png" id="12_g8mtc"]
[ext_resource type="Texture2D" uid="uid://r1nsx1uk8kxi" path="res://images/Sassy.png" id="13_l5g5r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5qg3f"]
size = Vector2(11.5, 3)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_supry"]
size = Vector2(10, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyt46"]
size = Vector2(10, 2)

[node name="home3" type="StaticBody2D" node_paths=PackedStringArray("nodesToRemove")]
y_sort_enabled = true
texture_filter = 1
position = Vector2(-1, 20)
script = ExtResource("1_fgwgs")
nodesToRemove = [NodePath("hause/veranda"), NodePath("hause/sussy"), NodePath("hause/fiddlesticks")]

[node name="hause" type="Sprite2D" parent="."]
z_index = 1
y_sort_enabled = true
position = Vector2(812, 178)
scale = Vector2(2, 2)
texture = ExtResource("1_srlah")

[node name="bucket" type="Sprite2D" parent="hause"]
position = Vector2(-45.5, 31.5)
texture = ExtResource("3_qkj3e")

[node name="bucket" parent="hause/bucket" instance=ExtResource("3_ev7yt")]
position = Vector2(1.5, 6)
scale = Vector2(3.22, 1.48)
flipCharacter = false

[node name="Cazan" type="Sprite2D" parent="hause"]
position = Vector2(-351.5, 43)
texture = ExtResource("2_excpj")
offset = Vector2(0, 4)

[node name="veranda" type="Sprite2D" parent="hause"]
y_sort_enabled = true
position = Vector2(-120.5, 63)
texture = ExtResource("2_tiq6b")
offset = Vector2(0, -27)

[node name="veranda" parent="hause/veranda" instance=ExtResource("3_ev7yt")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hause/veranda/veranda"]
position = Vector2(1.75, -1.5)
shape = SubResource("RectangleShape2D_5qg3f")

[node name="table1" type="Sprite2D" parent="hause"]
position = Vector2(-354, 44)
texture = ExtResource("4_es6s4")
offset = Vector2(0, -2)

[node name="knife" type="Sprite2D" parent="hause/table1"]
position = Vector2(2, -18)
texture = ExtResource("5_8662y")

[node name="knife" parent="hause/table1/knife" instance=ExtResource("3_ev7yt")]
position = Vector2(-0.5, 27.04)
scale = Vector2(1.345, 2.56)
skew = 0.734784
flipCharacter = false

[node name="table2" type="Sprite2D" parent="hause"]
position = Vector2(-256.667, 78)
texture = ExtResource("6_7y6lc")
offset = Vector2(0, -12)

[node name="chair1" type="Sprite2D" parent="hause"]
position = Vector2(-320, 88)
texture = ExtResource("7_gjig4")
offset = Vector2(0, -25)

[node name="chair2" type="Sprite2D" parent="hause"]
position = Vector2(-187.5, 80)
texture = ExtResource("8_uiqo5")
offset = Vector2(0, -16)

[node name="chair3" type="Sprite2D" parent="hause"]
position = Vector2(326.5, 79)
texture = ExtResource("8_uiqo5")
offset = Vector2(0, -16)

[node name="Sprite2D6" type="Sprite2D" parent="hause"]

[node name="fiddlesticks" type="Sprite2D" parent="hause"]
position = Vector2(35.5, 74.5)
scale = Vector2(0.75, 0.75)
texture = ExtResource("12_g8mtc")
offset = Vector2(0, -20)
flip_h = true

[node name="fiddlesticks" parent="hause/fiddlesticks" instance=ExtResource("3_ev7yt")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hause/fiddlesticks/fiddlesticks"]
position = Vector2(1, 0)
shape = SubResource("RectangleShape2D_supry")

[node name="sussy" type="Sprite2D" parent="hause"]
position = Vector2(159.5, 69)
scale = Vector2(0.9, 0.9)
texture = ExtResource("13_l5g5r")
offset = Vector2(0, -20)

[node name="sussy" parent="hause/sussy" instance=ExtResource("3_ev7yt")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hause/sussy/sussy"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_jyt46")

[node name="ladder" parent="hause" instance=ExtResource("3_ev7yt")]
position = Vector2(311, 39)
scale = Vector2(2.3125, 1.1825)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
visible = false
position = Vector2(-1, -100)
scale = Vector2(2, 2)
polygon = PackedVector2Array(0.5, 228.5, 61.5, 169, 752.5, 169, 813, 227.5, 0.5, 228.5, 72, 228.5, 84, 216.5, 101.5, 216.5, 91.5, 226, 115.5, 226, 124.5, 213.5, 185, 213.5, 178, 226, 206, 226.5, 210, 218.5, 230, 218.5, 225.5, 227, 719, 226.5, 724, 217.5, 744.5, 217.5, 739.5, 226.5, 810, 226.5, 750, 170, 725.5, 170, 717, 182, 703, 170, 399.5, 171, 396, 177.5, 384.5, 175, 369.5, 187.5, 360.5, 182.5, 347.5, 182.5, 339, 189, 332, 183.5, 318.5, 180, 259, 180, 257, 182, 254.5, 180, 190.5, 180, 190.5, 171, 175.5, 171, 175.5, 179.5, 157, 179.5, 150.5, 170, 145, 174.5, 137, 174.5, 132.5, 170, 62, 170, 50, 181.5, 76.5, 181.5, 49, 201.5, 30, 201.5)

[node name="player" parent="." instance=ExtResource("9_dcg50")]
position = Vector2(1405, 305)

[node name="Camera2D" type="Camera2D" parent="player" node_paths=PackedStringArray("map")]
position = Vector2(0, -25)
limit_left = 0
limit_top = -30
script = ExtResource("10_8eryw")
map = NodePath("../../hause")
